# mb-cli

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  dist-workspace.toml  tree.txt
.github/workflows/: pr-tests.yml
src/: cli.rs  client.rs  main.rs  server.rs  table.rs
