[package]
name = "modbus_client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mb-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }
tokio-modbus = { version = "0.16.1", features = ["tcp-server", "rtu-server"] }
tokio-serial = "5.4"
