[package]
name = "mb-cli"
version = "1.0.0"
edition = "2024"
authors = ["Warren Krettek <warrenkrettek@gmail.com>"]
description = "A blazing fast, reliable Modbus TCP and RTU client and server command-line tool"
readme = "README.md"
homepage = "https://github.com/wkrettek/mb-cli"
repository = "https://github.com/wkrettek/mb-cli"
license = "MIT OR Apache-2.0"
keywords = ["modbus", "industrial", "iot", "automation"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    "target/",
    "AGENTS.md"
]

[[bin]]
name = "mb-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }
tokio-modbus = { version = "0.16.1", features = ["tcp-server", "rtu-server"] }
tokio-serial = "5.4"

[dev-dependencies]
tokio-test = "0.4"
